@@ -2,7 +2,8 @@ plugins {
     id 'java'
     id 'application'
     id 'org.jetbrains.kotlin.jvm' version '1.6.0'
-    id "com.github.johnrengelman.shadow" version "7.1.0"
+    id 'com.github.johnrengelman.shadow' version '7.1.0'
+    id 'org.panteleyev.jpackageplugin' version '1.3.1'
 }
 
 group 'org.myteer'
@@ -11,6 +12,22 @@ version '1.0.0-SNAPSHOT'
 sourceCompatibility = '16'
 targetCompatibility = '16'
 mainClassName = 'org.myteer.novel.main.Main'
+applicationDefaultJvmArgs = [
+        '-Dhttps.protocols=TLSv1.2,TLSv1.1,TLSv1',
+        '--add-exports', 'javafx.base/com.sun.javafx=ALL-UNNAMED',
+        '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.text=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+        '--add-opens', 'javafx.graphics/javafx.scene.text=ALL-UNNAMED',
+        '--add-opens', 'javafx.graphics/com.sun.javafx.text=ALL-UNNAMED'
+]
 
 compileJava {
     options.encoding = 'UTF-8'
@@ -77,3 +94,6 @@ shadowJar {
     exclude 'javafx-swt.jar'
     exclude 'junit/**'
 }
+
+/* --------------------------------- Distribution ------------------------------------ */
+def distributionDir = new File(projectDir, "distribution")
